# wasi-logger

./: Cargo.toml  LICENSE-MIT  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yml  rustdoc.yml
search.desc/wasi_logger/: wasi_logger-desc-0-.js
src/: lib.rs
src/wasi_logger/: lib.rs.html
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/log/: trait.Log.js
wasi_logger/: all.html  index.html  struct.Logger.html
wit/: deps.toml  world.wit
