[package]
name = "wasi-logger"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
license = "MIT OR Apache-2.0"
authors = ["Juniper Tyree <juniper.tyree@helsinki.fi>"]
repository = "https://github.com/juntyr/wasi-logger"
readme = "README.md"
description = """
A `log::Log` implementation for WASM components backed by the `wasi:logging/logging` WIT interface.
"""
keywords = ["log", "wasi", "logging"]
categories = ["development-tools::debugging", "no-std", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", default-features = false }
wit-bindgen = { version = "0.24", default-features = false, features = ["macros"] }

[features]
kv = ["log/kv"]
